--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+pipeline-mod-dedicon v1.1.0
+===========================
+
+Includes
+--------
+- Initial default CSS.
+
 pipeline-mod-dedicon v1.0.0
 ===========================
 
