--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@ pipeline-mod-dedicon v1.1.0
 Includes
 --------
 - Initial default CSS.
+- Improved Liblouis table for Dutch grade 0 (https://github.com/snaekobbi/liblouis/issues/6,
+  https://github.com/snaekobbi/issues/issues/13)
 
 pipeline-mod-dedicon v1.0.0
 ===========================
