--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+pipeline-mod-dedicon v1.2.0
+===========================
+Compatibility update
+
+
 pipeline-mod-dedicon v1.1.0
 ===========================
 
