Document the default stylesheet. Fixes #10.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+pipeline-mod-dedicon v1.2.1
+===========================
+
+Includes
+--------
+- Documentation in the default CSS (https://github.com/snaekobbi/pipeline-mod-dedicon/issues/10)
+
 pipeline-mod-dedicon v1.2.0
 ===========================
 Compatibility update
