--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ Includes
 - Documentation in the default CSS (https://github.com/snaekobbi/pipeline-mod-dedicon/issues/10)
 - Support special classes `precedingemptyline`, `indented` and `table-title`
   (https://github.com/snaekobbi/pipeline-mod-dedicon/issues/8)
+- Initial support for tables (https://github.com/snaekobbi/pipeline-mod-dedicon/issues/11)
 - Minor fixes.
 
 pipeline-mod-dedicon v1.2.0
