Support producer notes. Fixes #13.

--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,7 @@ Includes
   (https://github.com/snaekobbi/pipeline-mod-dedicon/issues/8)
 - Initial support for tables (https://github.com/snaekobbi/pipeline-mod-dedicon/issues/11)
 - Support for images and captions (https://github.com/snaekobbi/pipeline-mod-dedicon/issues/12)
+- Support for producer notes (https://github.com/snaekobbi/pipeline-mod-dedicon/issues/13)
 - Minor fixes.
 
 pipeline-mod-dedicon v1.2.0
