--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+pipeline-mod-dedicon v1.4.0
+===========================
+
+Includes
+--------
+- Support for generated TOC (https://github.com/snaekobbi/pipeline-mod-dedicon/issues/14)
+- Better support for generated title pages (https://github.com/snaekobbi/pipeline-mod-dedicon/issues/16)
+- Support for generated colophon (https://github.com/snaekobbi/pipeline-mod-dedicon/issues/22)
+
 pipeline-mod-dedicon v1.3.0
 ===========================
 
