Support sidebars. re #27

--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ Includes
 - Better support for generated title pages (https://github.com/snaekobbi/pipeline-mod-dedicon/issues/16)
 - Support for generated colophon (https://github.com/snaekobbi/pipeline-mod-dedicon/issues/22)
 - Better options handling (https://github.com/snaekobbi/pipeline-mod-dedicon/issues/23)
+- Support for sidebars (https://github.com/snaekobbi/pipeline-mod-dedicon/issues/27)
 
 pipeline-mod-dedicon v1.3.0
 ===========================
