--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+pipeline-mod-dedicon v1.5.0
+===========================
+
+Includes
+--------
+- Rendering of notes at the end of the block in which they are referenced
+  (https://github.com/snaekobbi/pipeline-mod-dedicon/issues/31)
+- Bugfixes
+
+
 pipeline-mod-dedicon v1.4.0
 ===========================
 
