--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+pipeline-mod-dedicon v1.5.1
+===========================
+
+Includes
+--------
+- Better support for images (https://github.com/snaekobbi/pipeline-mod-dedicon/issues/12)
+
 pipeline-mod-dedicon v1.5.0
 ===========================
 
