Add volume headings to the document-level TOC. Fixes #41.

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ pipeline-mod-dedicon v1.5.2
 Includes
 --------
 - Splitting the output into one BRF file per volume (https://github.com/snaekobbi/pipeline-mod-dedicon/issues/21)
+- Add volume headings to document-level TOCs (https://github.com/snaekobbi/pipeline-mod-dedicon/issues/41)
 
 pipeline-mod-dedicon v1.5.1
 ===========================
