--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+pipeline-mod-dedicon v1.6.1
+===========================
+
+Includes
+--------
+- Small improvements and fixes
+
 pipeline-mod-dedicon v1.5.2
 ===========================
 
