--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ pipeline-mod-dedicon v1.6.1
 
 Includes
 --------
+- Writes BRF files in the ANSI encoding (https://github.com/snaekobbi/pipeline-mod-dedicon/issues/44)
 - Moving the print colophon to the last volume (https://github.com/snaekobbi/pipeline-mod-dedicon/issues/46)
 - Small improvements and fixes
 
